--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add new food here</h1>
 <%= render partial: 'shared/errors', locals:{ obj: @food } %>
-<%= render 'form' %>
+<%= link_to "Go back to Index", diaries_path %>
+<div class="flex-container">
+  <%= render 'form' %>
+</div>
