--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="diary-form">
+  <h2>Custom add</h2>
   <%= form_with(model: @diary, local: true) do |form| %>
     <%= render partial: "shared/errors", locals:{obj: @diary} %>
 
