change meal partial title

--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="diary-form">
   <%= form_with model: @meal do |f| %>
-    Create new meal
+    Meal name
     <%= f.text_field :meal_name %>
     <div class="form-btn">
       <%= f.submit "Create Meal"%>
