make edit button wider

--- a/app/assets/stylesheets/diaries_new.css
+++ b/app/assets/stylesheets/diaries_new.css
@@ -73,7 +73,7 @@
   background-color: #6e48b0;
   /* border: none; */
   color: white;
-  padding: 3px;
+  padding: 3px 4px;
   /* margin: auto; */
   border-radius: 20px;
   text-decoration: none;
