--- a/app/assets/stylesheets/sub_diaries.css
+++ b/app/assets/stylesheets/sub_diaries.css
@@ -16,7 +16,7 @@
   color: #fff;
   height: 36px;
   font-size: 20px;
-  text-align: end;
+  text-align: space-between;
   padding-right: 9%;
 }
 .sub-diary thead th:nth-child(1){
@@ -49,6 +49,7 @@
 }
 .link{
   padding-left: 40%;
+  text-decoration: none;
 }
 .diary-empty{
   text-align: center;
