--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+/* Color Scheme
+  #80ccffca blue
+  #633aaa purple
+*/
  * {
   margin: 0;
   box-sizing: border-box;
