cjange project name

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
 <div class="navbar">
-<%= link_to "home", diaries_path %>
+<%= link_to "Grapevine", diaries_path %>
 <%= link_to "profile", user_path(current_user) %>
 </div>
