--- a/app/assets/stylesheets/diaries_new.css
+++ b/app/assets/stylesheets/diaries_new.css
@@ -26,7 +26,7 @@
   padding: 10px; 
   padding-right: 20px;
 }
-.field{
+.diary-field{
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -56,17 +56,14 @@
   padding-left: 10px;
 }
 .button-link {
-  display: inline-block;
   padding: 5px 5px;
-  background-color: #80ccffca;
+  background-color: #6e48b0;
   color: white;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
-  border: solid #633aaa 1px;
+  font-size: 12px;
   border-radius: 5px;
   cursor: pointer;
-  margin: 5px;
 }
 .button {
   display: inline-block;
