--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,5 +8,9 @@
               destroy_user_session_path,
               data: {turbo_method: :delete},
               class: "nav nav-link" %>
+<%elsif controller_name != 'sessions' %>
+    <%= link_to "Log in", new_session_path(resource_name), class:"nav nav-link"%>
+<%elsif devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "Sign up", new_registration_path(resource_name), class:"nav nav-link"%>
 <%end%>
 </div>
