--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,49 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="flex-container">
+  <div class="user-form">
+    <h2>Sign up</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="user-field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="user-field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="user-field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :cals_budget %><br />
-    <%= f.text_field :cals_budget%>
-  </div>
-  <div class="field">
-    <%= f.label :protein_budget %><br />
-    <%= f.text_field :protein_budget%>
-  </div>
-  <div class="field">
-    <%= f.label :fats_budget %><br />
-    <%= f.text_field :fats_budget%>
-  </div>
-  <div class="field">
-    <%= f.label :carbs_budget %><br />
-    <%= f.text_field :carbs_budget%>
-  </div>
+      <div class="user-field">
+        <%= f.label :cals_budget %><br />
+        <%= f.text_field :cals_budget%>
+      </div>
+      <div class="user-field">
+        <%= f.label :protein_budget %><br />
+        <%= f.text_field :protein_budget%>
+      </div>
+      <div class="user-field">
+        <%= f.label :fats_budget %><br />
+        <%= f.text_field :fats_budget%>
+      </div>
+      <div class="user-field">
+        <%= f.label :carbs_budget %><br />
+        <%= f.text_field :carbs_budget%>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      
+        <%= f.submit "Sign up", class: "user-button"  %>
+      
+    <% end %>
+</div>
+</div>
+    
