--- a/app/views/foods_meals/_added_foods_list.html.erb
+++ b/app/views/foods_meals/_added_foods_list.html.erb
@@ -1,13 +1,18 @@
 <ol class="meal-card">
   <% @meal.foods.each do |food|%>
     <li class="meal-item">
-      <div class="meal-name"><%=food.food_name%><%= link_to "remove item", foods_meal_path(FoodsMeal.find_by(food_id: food.id, meal_id: @meal.id)), data:{"turbo-method": :delete}  %> </div>
+      <div class="meal-name">
+        <%=food.food_name%>
+        <%= link_to "remove item",
+                    foods_meal_path(FoodsMeal.find_by(food_id: food.id, meal_id: @meal.id)),
+                    data:{"turbo-method": :delete}, class: "button"  %>
+      </div>
       <div class= "meal-macros">
-        <%= food.calories %> Calories/
-        <%= food.protein %> protein/
-        <%= food.fats %> fats/
-        <%= food.carbs %> carbs/
-        <%= food.servings %> servings/
+        <div><%= food.calories %> Calories</div>
+        <div><%= food.protein %> protein</div>
+        <div><%= food.fats %> fats</div>
+        <div><%= food.carbs %> carbs</div>
+        <div><%= food.servings %> servings</div>
       </div>
     </li>
   <%end%>
