--- a/app/views/foods_meals/new.html.erb
+++ b/app/views/foods_meals/new.html.erb
@@ -1,11 +1,13 @@
-<h1 class="title"><%=@meal.meal_name%></h1>
-<%= link_to "Go back", diaries_path %>
-<div class= "meal-grid">
-  <%= render "meal_foods_list" %>
-  <div class="meal-sum-title">Budget:  <%= current_user.cals_budget%> calories</div>
-  <div class="meal-sum">
-      <%= @meal.foods.sum(:calories) %>
+<div class="flex-container">
+  <div class= "form-group-2">
+    <h2 class="meal-card-header">
+      <%=@meal.meal_name%>
+      <div class="meal-sum">
+      <%= "#{@meal.foods.sum(:calories)} Cals" %>
+      </div>
+    </h2>
+    <%= render "added_foods_list" %>
+
+    <%= render "foods/food_list_mini_form" %>
   </div>
-  <%= render "foods/food_list_mini_form" %>
-  
 </div>
