--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -2,32 +2,32 @@
 <div class="food-card">
   <div class = "food-form">
   <h1>Add food</h1>
-    <div class="field">
+    <div class="food-field">
       <%= f.label :food_name, "Name of food", class: "food-label" %>
       <%= f.text_field :food_name, class: "food-input" %>
     </div>
 
-    <div class="field">
+    <div class="food-field">
       <%= f.label :calories, "Calories per serv.", class: "food-label" %>
       <%= f.text_field :calories, class: "food-input" %>
     </div>
 
-    <div class="field">
+    <div class="food-field">
       <%= f.label :protein, "Protein", class: "food-label" %>
       <%= f.text_field :protein, class: "food-input" %>
     </div>
 
-    <div class="field">
+    <div class="food-field">
       <%= f.label :carbs, "Carbohydrates", class: "food-label" %>
       <%= f.text_field :carbs, class: "food-input" %>
     </div>
 
-    <div class="field">
+    <div class="food-field">
       <%= f.label :fats, "Fats", class: "food-label" %>
       <%= f.text_field :fats, class: "food-input" %>
     </div>
 
-    <div class="field">
+    <div class="food-field">
       <%= f.label :servings, "Servings", class: "food-label" %>
       <%= f.text_field :servings, class: "food-input" %>
     </div>
