pass time of day as a param

--- a/app/views/foods/_food_list_mini_form.html.erb
+++ b/app/views/foods/_food_list_mini_form.html.erb
@@ -8,6 +8,7 @@
         <%= food.calories %>
         <%= form.hidden_field :food_id, value: food.id %>
         <%= form.hidden_field :meal_id, value: @meal.id %>
+        <%= form.hidden_field :time_of_day, value: @time_of_day %>
         <%= form.submit "Add food" %>
         </li>
       <% end %>
