add link "go back" with param time of day

--- a/app/views/foods_meals/new.html.erb
+++ b/app/views/foods_meals/new.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Go back", new_diary_path(time_of_day: @time_of_day) %>
 <div class="flex-container">
   <div class= "form-group-2">
     <h2 class="meal-card-header">
