--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -31,6 +31,7 @@
       <%= f.label :servings, "Servings", class: "food-label" %>
       <%= f.text_field :servings, class: "food-input" %>
     </div>
+    <%= f.hidden_field :time_of_day, value: @time_of_day %>
     <%=f.submit class: "food-button"%>
   </div>
 </div>
