--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -1,8 +1,8 @@
 /* #80ccffca blue
    #633aaa purple
 */
-.user-form{
-  background-color: #6e48b0 ;
+.user-form {
+  background-color: #6e48b0;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -14,9 +14,11 @@
 .user-field {
   font-size: 20px;
 }
-.user-button[type=button], .user-button[type=submit], .user-button[type=reset] {
+.user-button[type="button"],
+.user-button[type="submit"],
+.user-button[type="reset"] {
   font-size: 18px;
-  background-color: #80ccffca ;
+  background-color: #80ccffca;
   color: #6e48b0;
   padding: 5px 8px;
 }
