--- a/app/assets/stylesheets/diaries_index.css
+++ b/app/assets/stylesheets/diaries_index.css
@@ -1,4 +1,3 @@
-
 .container-flex {
   display: flex;
 }
@@ -6,7 +5,7 @@
   width: 600px;
   border-collapse: collapse;
   font-size: 18px;
-  box-shadow: 10px 10px 10px 1px rgba( 0, 0, 0 , .1);
+  box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.1);
   margin: 30px;
   border-radius: 10px;
 }
@@ -30,16 +29,16 @@
   background-color: #80ccff95;
 }
 /* rounding table corners manually because it won't when applied to the entire table */
-.table thead th:nth-child(1){
+.table thead th:nth-child(1) {
   border-top-left-radius: 10px;
 }
-.table thead th:nth-child(5){
+.table thead th:nth-child(5) {
   border-top-right-radius: 10px;
 }
-.table tbody tr:nth-child(3) th:nth-child(1){
+.table tbody tr:nth-child(3) th:nth-child(1) {
   border-bottom-left-radius: 10px;
 }
-.table tbody tr:nth-child(3) td:nth-child(5){
+.table tbody tr:nth-child(3) td:nth-child(5) {
   border-bottom-right-radius: 10px;
 }
 .neg-macro {
