reformat with prettier

--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,20 +1,16 @@
-
 <div class= flex-container>
   <div class="form-group-1">
     <%= render "form" %><br/>
-    <p>- create new meal -</p><br/>
+    <p>- create new meal -</p>
+    <br/>
     <%= render "meals/form" %>
   </div>
-
   <div class="form-group-2">
     <%if @foods_meals && !@foods_meals.empty?%>
       <h2>Your meals</h2>
       <%= render "foods_meals/index_form"%>
     <%end%>
-    
     <h2>Your foods <%= link_to "Add new", new_food_path(time_of_day: params[:time_of_day]) , class: "button-link"%></h2>
     <%= render "foods/food_list_form" %>
   </div>
 </div>
-
-
